--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2011-11-15  Satoshi Nagayasu <satoshi.nagayasu@gmail.com>
+        * Version 0.5.1
+        * Allows to lookup the object names for the build-in database objects
+          by reading `oid2name.txt' file, instead of reading the system
+          catalogs throught a database connection,
+        * Added '-f, --file' option to read an oid2name cache file,
+        * Added '-g, --gen_oid2name' option to generate an oid2name file
+          to cache oids and object names in the system catalogs.
+
 2011-09-26  Satoshi Nagayasu <satoshi.nagayasu@gmail.com>
 	* Version 0.5.0
 	* Fixed to allow to be compiled againt 9.1.
